# vision-camera-ocr

./: .biomeignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  VisionCameraOcr.podspec  biome.json  lefthook.yml  nitro.json  package.json  tsconfig.json  turbo.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/chuksdengr/visioncameraocr/: VisionCameraOcrPackage.kt
android/src/main/java/com/margelo/nitro/com/chuksdengr/visioncameraocr/: HybridOcrPlugin.kt
ios/: HybridOcrPlugin.swift
src/: index.tsx
src/__tests__/: index.test.tsx
src/specs/: OcrPlugin.nitro.ts
